[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arg-toolkit"
version = "1.0.0"
description = "A collection of ComfyUI nodes for cryptography, steganography, encryption, decryption, and tools needed to both make and solve ARGs (Alternative Reality Games) and secret messages."
authors = [
  {name = "AzelusLightvale", email = "NexusLightvale@protonmail.com"}
]
readme = "README.md"
license = {text = "LICENSE"}
requires-python = ">=3.10"
classifiers = ["Operating System :: OS Independent",]
dependencies = []
dynamic = ["dependencies"]



[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # lintingclass 
]

[project.urls]
Repository = "https://github.com/AzelusLightvale/ComfyUI-ARG-Toolkit"
BugTracker = "https://github.com/AzelusLightvale/ComfyUI-ARG-Toolkit/issues"
Documentation = "https://github.com/AzelusLightvale/ComfyUI-ARG-Toolkit/wiki"


[tool.comfy]
PublisherId = "AzelusLightvale"
DisplayName = "ComfyUI ARG Toolkit"
Icon = ""
Tags = []
Repository = "https://github.com/AzelusLightvale/ComfyUI-ARG-Toolkit"

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
